force-app/main/default/objects/Property__c/fields/Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Through_Date__c</fullName>
    <formula>Pipeline_Record__r.Paid_Through_Date__c</formula>
    <label>Paid Through Date</label>
    <type>Date</type>
</CustomField>