force-app/main/default/objects/Property__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <description>Gives the Parking type</description>
    <formula>TEXT(Prospect_Record__r.Parking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking</label>
    <type>Text</type>
</CustomField>