force-app/main/default/objects/Property__c/fields/Percentage_Variance_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Variance_to_Budget__c</fullName>
    <formula>Dollar_Variance_to_Budget__c /  Bid_Recommendation_Contingency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage (%) Variance to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>