force-app/main/default/objects/Property__c/fields/Period_Covered_by_the_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Period_Covered_by_the_Assessment__c</fullName>
    <formula>Pipeline_Record__r.Period_Covered_by_the_Assessment__c</formula>
    <label>Period Covered by the Assessment</label>
    <type>Text</type>
</CustomField>