force-app/main/default/objects/Property__c/fields/Pipeline_Record__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Pipeline Record ID</description>
    <label>Pipeline Record</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>