force-app/main/default/objects/Property__c/fields/Pre_Con_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Con_Meeting_Date__c</fullName>
    <label>Pre-Con Meeting Date</label>
    <type>Date</type>
</CustomField>