force-app/main/default/objects/Property__c/fields/Projected_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Rehab_Complete_Date__c</fullName>
    <label>Projected Rehab Complete Date</label>
    <type>Date</type>
</CustomField>