force-app/main/default/objects/Property__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Property</label>
    <type>AutoNumber</type>
</CustomField>