force-app/main/default/objects/Property__c/fields/Property_Acq_Source__c.field-meta.xml
<CustomField>
    <fullName>Property_Acq_Source__c</fullName>
    <label>Property Acq Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>RTM - Tiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>