force-app/main/default/objects/Property__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Gives the Property address
IF(NOT(ISBLANK(Prospect_Record__c)), Prospect_Record__r.Property_Address__c, Property_Staging__r.Property_Address__c)</description>
    <formula>Property_Street_Address__c + &quot;,&quot; + &quot; &quot; + Property_City__c + &quot;,&quot; + &quot; &quot; + Property_State__c + &quot; &quot; + Property_Zip_Code__c</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>