force-app/main/default/objects/Property__c/fields/Property_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Text__c</fullName>
    <description>Property Address field to show the property address on the global search</description>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>