force-app/main/default/objects/Property__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <description>Gives the Property City
IF(NOT(ISBLANK(Prospect_Record__c)), Prospect_Record__r.Property_City__c, Property_Staging__r.Property_City__c)</description>
    <formula>IF(ISBLANK(Address_Record__r.Validated_City__c) , Address_Record__r.City__c,Address_Record__r.Validated_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property City</label>
    <type>Text</type>
</CustomField>