force-app/main/default/objects/Property__c/fields/Property_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Property_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Id 18-Digit</label>
    <type>Text</type>
</CustomField>