force-app/main/default/objects/Property__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <description>Gives the Property State
IF(NOT(ISBLANK(Prospect_Record__c)), Prospect_Record__r.Property_State__c, Property_Staging__r.Property_State__c)</description>
    <formula>IF(ISBLANK(Address_Record__r.Validated_State__c) , Address_Record__r.State__c,Address_Record__r.Validated_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>