force-app/main/default/objects/Property__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <description>Gives the Property street address
IF(NOT(ISBLANK(Prospect_Record__c)), Prospect_Record__r.Property_Street_Address__c, Property_Staging__r.Property_Street_Address__c)</description>
    <formula>Address_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>