force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Gives the Property type</description>
    <formula>TEXT(Prospect_Record__r.Property_Type__c)</formula>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>