force-app/main/default/objects/Property__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <description>Gives the property zip code
IF(NOT(ISBLANK(Prospect_Record__c)), Prospect_Record__r.Property_Zip_Code__c, LPAD( Property_Staging__r.Property_Zip_Code__c , 5 , &quot;0&quot; ))</description>
    <formula>Address_Record__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>