force-app/main/default/objects/Property__c/fields/Prospect_Record__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Prospect record ID</description>
    <label>Prospect Record</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>