force-app/main/default/objects/Property__c/fields/Received_BPO_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_BPO_Date__c</fullName>
    <label>Received BPO Date</label>
    <type>Date</type>
</CustomField>