force-app/main/default/objects/Property__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Region details</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>