force-app/main/default/objects/Property__c/fields/Rehab_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Estimator__c</fullName>
    <formula>IF(Inspection_Record__r.Repair_Estimator__c!=null,Inspection_Record__r.Repair_Estimator__r.FirstName  +&quot; &quot; + Inspection_Record__r.Repair_Estimator__r.LastName,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Estimator</label>
    <type>Text</type>
</CustomField>