force-app/main/default/objects/Property__c/fields/Rental_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Rental_Restrictions__c</fullName>
    <formula>Pipeline_Record__r.Rental_Restrictions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Restrictions</label>
    <type>Checkbox</type>
</CustomField>