force-app/main/default/objects/Property__c/fields/Repair_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>