force-app/main/default/objects/Property__c/fields/Repair_Manager__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>