force-app/main/default/objects/Property__c/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <description>Gives the roof type</description>
    <formula>TEXT(Prospect_Record__r.Roof_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roof Type</label>
    <type>Text</type>
</CustomField>