force-app/main/default/objects/Property__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>Gives the Sale type</description>
    <formula>TEXT(Prospect_Record__r.Sale_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>