force-app/main/default/objects/Property__c/fields/Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet__c</fullName>
    <description>Gives the Square feet number</description>
    <formula>Prospect_Record__r.Square_Feet__c</formula>
    <label>Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>