force-app/main/default/objects/Property__c/fields/Stories_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Stories_of_Floors__c</fullName>
    <description>Gives the Property stories/floor details</description>
    <formula>Prospect_Record__r.Stories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stories/# of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>