force-app/main/default/objects/Property__c/fields/Sub_Market_New__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Market New</label>
    <referenceTo>Sub_Market__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>