force-app/main/default/objects/Property__c/fields/Target_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Rehab_Complete_Date__c</fullName>
    <formula>Inspection_Record__r.Target_Rehab_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Rehab Complete Date</label>
    <type>Date</type>
</CustomField>