force-app/main/default/objects/Property__c/fields/Tenant_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Move_In_Date__c</fullName>
    <inlineHelpText>Move In Date from Application</inlineHelpText>
    <label>Tenant Move-In Date</label>
    <type>Date</type>
</CustomField>