force-app/main/default/objects/Property__c/fields/Tenant_Move_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Move_out_Date__c</fullName>
    <formula>Pipeline_Record__r.Leaseback_TIP_Lease_Expiration_Date__c</formula>
    <label>Tenant Move-out Date</label>
    <type>Date</type>
</CustomField>