force-app/main/default/objects/Property__c/fields/Title_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Name__c</fullName>
    <formula>Pipeline_Record__r.Title_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Company Name</label>
    <type>Text</type>
</CustomField>