force-app/main/default/objects/Property__c/fields/Total_Commitment_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitment_to_Date__c</fullName>
    <formula>Work_Authorization_Amount__c + Approved_Change_Order_1_Amount__c + Approved_Change_Order_2_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commitment to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>