force-app/main/default/objects/Property__c/fields/Total_Rehab_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Rehab_Days__c</fullName>
    <formula>Projected_Rehab_Complete_Date__c - IF(Leaseback__c = True, Tenant_Move_out_Date__c, Pipeline_Record__r.Expected_Close_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rehab Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>