force-app/main/default/objects/Property__c/fields/Turn_ID__c.field-meta.xml
<CustomField>
    <fullName>Turn_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn ID</label>
    <referenceTo>Turn__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>