force-app/main/default/objects/Property__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Prospect_Record__r.Unit_Number__c</formula>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>