force-app/main/default/objects/Property__c/fields/Water_Heater_Age__c.field-meta.xml
<CustomField>
    <fullName>Water_Heater_Age__c</fullName>
    <description>Gives the Water Heater Age</description>
    <label>Water Heater Age</label>
    <length>3</length>
    <type>Text</type>
</CustomField>