force-app/main/default/objects/Property__c/fields/Water_Meter_and_Serial__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter_and_Serial__c</fullName>
    <description>Gives the Water meter and serial number</description>
    <label>Water Meter and Serial #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>