force-app/main/default/objects/Property__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <externalId>true</externalId>
    <label>Yardi Property Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>