force-app/main/default/objects/Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <description>Gives the year when the Property was built</description>
    <formula>Prospect_Record__r.Year_Built__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Built</label>
    <type>Text</type>
</CustomField>